chore: use different token

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -144,6 +144,6 @@ jobs:
       - name: Release monorepo
         if: ${{ inputs.customRelease }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: yarn release
