chore: remove cache dir

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -146,4 +146,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn release --cache-dir=.turbo
+        run: yarn release
