--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,9 @@ on:
       release:
         required: true
         type: boolean
+      ref:
+        required: false
+        type: string
       release_branches:
         required: false
         default: |
@@ -40,6 +43,7 @@ jobs:
           GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN || secrets.NPM_CI_TOKEN }}
           NPMRC_ENCODED: ${{ secrets.QLIK_NPM_DEV_ENCODED }}
+          REF: ${{ inputs.ref }}
 
       - name: Read package.json
         uses: actions/github-script@v6
