--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -12,6 +12,9 @@ inputs:
   NPMRC_ENCODED:
     description: "BASE64 encoded .npmrc file"
     required: false
+  REF:
+    description: "Reference to checkout"
+    required: false
 
 runs:
   using: composite
@@ -22,6 +25,7 @@ runs:
       with:
         fetch-depth: 0
         persist-credentials: false
+        ref: ${{ inputs.REF }}
 
     - name: Setup Node
       uses: actions/setup-node@v3
