--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -25,8 +25,10 @@ runs:
       run: |
         cat ${GITHUB_ACTION_PATH}/.release-it.js > .release-it.js
     - name: Release it
+      shell: bash
       if: ${{ !inputs.monorepo_manager }}
       run: ${{ inputs.package_manager }} release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
     - name: Release it monorepo
+      shell: bash
       if: ${{ inputs.monorepo_manager }}
       run: ${{ inputs.package_manager }} ${{ inputs.monorepo_manager }} run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
