--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -31,4 +31,4 @@ runs:
     - name: Release it monorepo
       shell: bash
       if: ${{ inputs.monorepo_manager }}
-      run: ${{ inputs.monorepo_manager }} workspaces run release-it -- --config ${GITHUB_ACTION_PATH}/.release-it.js
+      run: ${{ inputs.package_manager }} run release-it -- --config ${GITHUB_ACTION_PATH}/.release-it.js
