fix: run in workspaces

--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -40,4 +40,4 @@ runs:
         NPM_TOKEN: ${{ inputs.NPM_TOKEN }}
       shell: bash
       if: ${{ inputs.monorepo_manager }}
-      run: ${{ inputs.package_manager }} run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+      run: ${{ inputs.package_manager }} workspaces run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
