--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,9 +12,7 @@ on:
           [
             'main',
             'master',
-            {name: 'beta', prerelease: true},
-            {name: 'alpha', prerelease: true},
-            '+([0-9])?(.{+([0-9]),x}).x'
+            'release/*'
           ]
         type: string
       api_specification_path:
