--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -42,6 +42,7 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
         NPM_TOKEN: ${{ inputs.NPM_TOKEN }}
         release_branches: ${{ inputs.release_branches }}
+        monorepo: ${{ !!inputs.monorepo_manager }}
       shell: bash
       if: ${{ inputs.monorepo_manager }}
       run: ${{ inputs.package_manager }} workspaces run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js -VV
