--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -24,11 +24,14 @@ runs:
 
   steps:
     - name: Configure release-it and git user
+      id: git-setup
       shell: bash
       run: |
         git config user.name "${GITHUB_ACTOR}"
         git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git config --global url.https://${{ inputs.GH_TOKEN }}@github.com/.insteadOf https://github.com/
+        branch_name=git rev-parse --abbrev-ref HEAD
+        echo "branch_name=$branch_name" >> "$GITHUB_OUTPUT"
     - name: Release it
       env:
         GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
@@ -43,6 +46,7 @@ runs:
         NPM_TOKEN: ${{ inputs.NPM_TOKEN }}
         release_branches: ${{ inputs.release_branches }}
         monorepo: ${{ !!inputs.monorepo_manager }}
+        branch_name: ${{ steps.git-setup.outputs.branch_name}}
       shell: bash
       if: ${{ inputs.monorepo_manager }}
       run: ${{ inputs.package_manager }} workspaces run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js -VV
