--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -12,7 +12,7 @@ inputs:
   package_manager:
     description: ""
     required: true
-  monorepo_manager:
+  monorepo:
     description: ""
     required: false
   release_branches:
@@ -38,15 +38,11 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
         NPM_TOKEN: ${{ inputs.NPM_TOKEN }}
         release_branches: ${{ inputs.release_branches }}
+        monorepo: ${{ inputs.monorepo }}
       shell: bash
-      if: ${{ !inputs.monorepo_manager }}
-      run: ${{ inputs.package_manager }} release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
-    - name: Release it monorepo
-      env:
-        GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
-        NPM_TOKEN: ${{ inputs.NPM_TOKEN }}
-        release_branches: ${{ inputs.release_branches }}
-        monorepo: ${{ !!inputs.monorepo_manager }}
-      shell: bash
-      if: ${{ inputs.monorepo_manager }}
-      run: ${{ inputs.package_manager }} workspaces run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js -VV
+      run: |
+        if [[ ${{ inputs.monorepo }} ]]; then
+          ${{ inputs.package_manager }} workspaces run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+        else
+          ${{ inputs.package_manager }} release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+        fi
