--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -33,8 +33,8 @@ runs:
         branch_name=$(git rev-parse --abbrev-ref HEAD)
         echo "branch_name=$branch_name" >> $GITHUB_ENV
         echo "action_path=${GITHUB_ACTION_PATH}" >> $GITHUB_ENV
-        pnpm add -g release-it@17.0.1
-        pnpm add -g @release-it/conventional-changelog
+        pnpm add -g @b12k/mvm@0.0.10
+        pnpm add -g @release-it/conventional-changelog@7.0.2
     - name: Release it
       env:
         GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
@@ -44,7 +44,7 @@ runs:
       shell: bash
       run: |
         if ${{ inputs.monorepo }}; then
-          ${{ inputs.package_manager }} workspaces run release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          ${{ inputs.package_manager }} workspaces exec npx release-it@17.0.1 --config ${GITHUB_ACTION_PATH}/.release-it.js
         else
-          ${{ inputs.package_manager }} release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          npx release-it@17.0.1 --config ${GITHUB_ACTION_PATH}/.release-it.js
         fi
