--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -43,7 +43,7 @@ runs:
       shell: bash
       run: |
         if ${{ inputs.monorepo }}; then
-          pnpm exec npx --package=@release-it/conventional-changelog@8.0.1 --package=release-it@17.0.1 --package=@b12k/mvm@0.0.10 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          pnpm -r exec npx --package=@release-it/conventional-changelog@7.0.2 --package=release-it@16.2.1 --package=@b12k/mvm@0.0.10 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         else
-          npx --package=@release-it/conventional-changelog@8.0.1 --package=release-it@17.0.1 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          npx --package=@release-it/conventional-changelog@7.0.2 --package=release-it@16.2.1 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         fi
