chore: pnpm as default

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ on:
       package_manager:
         required: false
         type: string
-        default: yarn
+        default: pnpm
       monorepo:
         required: false
         type: boolean
