feat: use release-it (#18)
* feat: release-it config

* fix: monorepo

* fix: use branch

* fix: add shell

* fix: input arguments

* fix: use yarn workspaces

* fix: run yarn

* fix: credentials

* fix: tokens as input

* fix: run in workspaces

* fix: require branches

* chore: verbose output

* chore: show status

* chore: add git status

* fix: use chore commit

* fix: do not copy release config

* chore: remove git status calls

* chore: release branches

* chore: parse string

* chore: set release branches

* feat: add plugin

* Revert "feat: add plugin"

This reverts commit 8dc724cc4450185f47d5271bfc9f661b64552b9d.

* chore: check monorepo

* chore: check branchName existance

* chore: get branch name

* fix: correct syntax

* fix: block releasing from release track

* fix: do not push

* chore: use release branches

* chore: patch release strategy

* chore: testing

* chore: check in git plugin

* chore: try increment

* chore: try node file with version

* chore: remove release track check

* chore: fix action path

* chore: try path variable

* chore: fix env variables

* chore: check branch name

* chore: move monorepo check

* chore: exit with error

* chore: fix output

* chore: fix output

* chore: exit in release it flow

* chore: try bin bash

* fix: bash script call

* chore: exit 1

* chore: combined setup

* chore: fix if else

* fix: if statement

* chore: verbose output

* fix: allow non release track

* fix: tag names single repos

* fix: release name

* chore: debug message

* chore: try if statement

* fix: monorepo check

* fix: version checks

* fix: add alpha and beta as branches

* chore: remove verbose output

* fix: remove console statement

* chore: install dependencies in action

* chore: setup dependencies

* fix: use correct package manager

* chore: only pnpm for monorepo

* chore: move installation


--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,9 +12,7 @@ on:
           [
             'main',
             'master',
-            {name: 'beta', prerelease: true},
-            {name: 'alpha', prerelease: true},
-            '+([0-9])?(.{+([0-9]),x}).x'
+            'release/*'
           ]
         type: string
       api_specification_path:
@@ -23,7 +21,11 @@ on:
       package_manager:
         required: false
         type: string
-        default: yarn
+        default: pnpm
+      monorepo:
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   build_release:
@@ -121,7 +123,8 @@ jobs:
           retention-days: 7
 
       - name: Release
-        uses: qlik-oss/sn-gh-workflows/actions/semantic-release@v1
+        if: ${{ inputs.release }}
+        uses: qlik-oss/sn-gh-workflows/actions/release-it@v2
         env:
           HUSKY: 0
         with:
@@ -134,3 +137,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           release: ${{ inputs.release }}
           release_branches: ${{ inputs.release_branches }}
+          monorepo: ${{ inputs.monorepo }}
+          package_manager: ${{ inputs.package_manager }}
+          spec_command: ${{ contains(fromJSON(steps.package.outputs.result), 'spec') }}
