chore: install dependencies before

--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -51,6 +51,7 @@ runs:
         branch_name=$(git rev-parse --abbrev-ref HEAD)
         echo "branch_name=$branch_name" >> $GITHUB_ENV
         echo "action_path=${GITHUB_ACTION_PATH}" >> $GITHUB_ENV
+        ${{ inputs.package_manager }} install --global @release-it/conventional-changelog@7.0.2 release-it@16.2.1 @b12k/mvm@0.0.10
     - name: Release it
       env:
         GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
@@ -70,5 +71,5 @@ runs:
           pnpm config set workspace-concurrency 1
           pnpm -r exec npx --package=@release-it/conventional-changelog@7.0.2 --package=release-it@16.2.1 --package=@b12k/mvm@0.0.10 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         else
-          npx --package=@release-it/conventional-changelog@7.0.2 --package=release-it@16.2.1 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          npx -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         fi
