--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -69,7 +69,7 @@ runs:
       run: |
         if ${{ inputs.monorepo }}; then
           pnpm config set workspace-concurrency 1
-          pnpm -r exec npx --package=@release-it/conventional-changelog@7.0.2 --package=release-it@16.2.1 --package=@b12k/mvm@0.0.10 -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          pnpm -r exec npx -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         else
           npx -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         fi
