--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -69,7 +69,7 @@ runs:
       run: |
         if ${{ inputs.monorepo }}; then
           pnpm config set workspace-concurrency 1
-          pnpm -r exec npx -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          pnpm -r exec release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         else
-          npx -- release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
+          release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         fi
