--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -71,5 +71,6 @@ runs:
           pnpm config set workspace-concurrency 1
           pnpm -r exec release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         else
+          echo "package_name=${node -p "require('./package.json').name"}" >> $GITHUB_ENV
           release-it --config ${GITHUB_ACTION_PATH}/.release-it.js
         fi
