--- a/actions/api-governance/action.yaml
+++ b/actions/api-governance/action.yaml
@@ -3,7 +3,7 @@ description: "Run api governance"
 author: "johan.enell@qlik.com"
 
 inputs:
-  API_SPECIFICATIONS_PATH:
+  API_SPECIFICATION_PATH:
     description: "The path to the api specification file"
     required: true
   API_KEY:
@@ -18,28 +18,23 @@ inputs:
   APICULTURIST_TOKEN:
     description: ""
     required: true
-  VERSION:
-    description: "The released version"
+  TAG:
+    description: "The github tag of the release"
+    required: true
 
 runs:
   using: composite
 
   steps:
-    - name: Prepare API Compliance
-      shell: bash
-      run: |
-        docker pull ghcr.io/qlik-download/api-compliance
-        docker create -v /specs --name specs alpine:3.4 /bin/true
-        docker cp ${{ inputs.API_SPECIFICATIONS_PATH }} specs:/specs/properties.json
-
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ inputs.TAG }}
     - name: Run API Compliance
+      env:
+        API_SPECIFICATION_PATH: ${{ inputs.API_SPECIFICATION_PATH }}
+        CURRENT_API_KEY: ${{ inputs.API_KEY }}
+        APICULTURIST_S3: ${{ inputs.APICULTURIST_S3 }}
+        APICULTURIST_GITHUB: ${{ inputs.APICULTURIST_GITHUB }}
+        APICULTURIST_TOKEN: ${{ inputs.APICULTURIST_TOKEN }}
       shell: bash
-      run: |
-        docker run --volumes-from specs
-            -e SPEC_PATHS="${{ inputs.API_KEY }}@/specs/properties.json"
-            -e COMMIT_SHA="${{ github.sha }}"
-            -e RELEASE_TAG="${{ inputs.VERSION }}"
-            -e CREDENTIALS_S3_SECRETKEY="${{ inputs.APICULTURIST_S3 }}"
-            -e CREDENTIALS_GITHUB="${{ inputs.APICULTURIST_GITHUB }}"
-            -e CREDENTIALS_COLONY="${{ inputs.APICULTURIST_TOKEN }}"
-            ghcr.io/qlik-download/api-compliance
+      run: ${{ github.action_path }}/../release-it/api-compliance.sh ${{ inputs.TAG }}
