chore: add more to dependabot
Signed-off-by: Johan Enell <johan.enell@qlik.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,27 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/actions/api-governance"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/actions/release-it"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/actions/setup"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/actions/test-api-compliance"
     schedule:
       interval: "daily"
